Fase E (v0.9): páginas públicas estáticas, layout navbar/footer, SCSS parciales (hero/footer/public), lint+build OK, README frontend actualizado

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
-# placeholder
+# Global ignores
+.DS_Store
+Thumbs.db
+.idea/
+.vscode/
+
+# Python
+__pycache__/
+.pytest_cache/
+.venv/
+venv/
+
+# Node
+node_modules/
+frontend/node_modules/
+
+# Env files
+.env
+.env.*
+
+# Logs
+*.log
+
+# Build artifacts
+frontend/static/scss/base.css
+
+# Runtime artifacts
+backend/celerybeat-schedule
