--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,1 +1,19 @@
-# placeholder
+{
+  "name": "ecommerce-frontend",
+  "private": true,
+  "version": "0.8.1",
+  "scripts": {
+    "scss:build": "sass --style=expanded assets/scss/base.scss static/scss/base.css --no-source-map",
+    "scss:watch": "sass --watch assets/scss/base.scss:static/scss/base.css",
+    "lint:scss": "stylelint \"assets/scss/**/*.scss\"",
+    "lint:scss:fix": "stylelint \"assets/scss/**/*.scss\" --fix",
+    "qa:ui": "npm run lint:scss && npm run scss:build"
+  },
+  "devDependencies": {
+    "sass": "^1.93.3",
+    "stylelint": "^16.25.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-scss": "^6.12.1"
+  }
+}
