--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -3,6 +3,9 @@ worker_processes  1;
 events { worker_connections 1024; }
 
 http {
+  # Cargar tipos MIME para que CSS se sirva como text/css
+  include /etc/nginx/mime.types;
+  default_type application/octet-stream;
   sendfile on;
   gzip on;
   gzip_types application/json text/plain text/csv application/javascript text/css;
@@ -17,14 +20,41 @@ http {
     root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-      try_files $uri $uri/ /index.html;
+    # Headers de seguridad básicos
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    # CSP mínima; ajustar si se rompen fuentes o inline
+    add_header Content-Security-Policy "default-src 'self'; img-src 'self' data:; style-src 'self' https://fonts.googleapis.com 'unsafe-inline'; font-src https://fonts.gstatic.com; script-src 'self'" always;
+
+    # Páginas públicas servidas por backend
+    location = / {
+      proxy_pass http://backend_upstream/;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location = /about {
+      proxy_pass http://backend_upstream/about;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location = /contact {
+      proxy_pass http://backend_upstream/contact;
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /static/ {
       alias /usr/share/nginx/html/static/;
       access_log off;
-      expires 7d;
+      expires 30d;
+      add_header Cache-Control "public, max-age=2592000, immutable";
     }
 
     # Proxy API FastAPI
